--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,6 @@
             <a class="nav__item -mobile -logo" href="http://www.gsi.dit.upm.es/"><span class="icon -io-mobile">GSI</span></a>
 
             <a class="nav__item -mobile -sandbox active" href="">Home</a>
-            <a class="nav__item -mobile -sandbox" href="http://www.gsi.dit.upm.es/">GSI Group</a>
             <a class="nav__item -mobile -sandbox" href="newdataset.html">Demo</a>
             <a class="nav__item -mobile -io-extended" href="https://github.com/gsi-upm/Sefarad-2.0/wiki">Documentation</a>
         </nav>
@@ -61,7 +60,6 @@
                 <nav class="nav -desktop" style="float: left">
                     <a class="nav__item -desktop -logo" href="index.html"><span class="icon -io">GSI</span></a>
                     <a class="nav__item -desktop -videos hide-for-small-only active" href="">Home</a>
-                    <a class="nav__item -desktop -home hide-for-small-only" href="http://www.gsi.dit.upm.es/">GSI Group</a>
                     <a class="nav__item -desktop -sandbox hide-for-small-only" href="newdataset.html">Demo</a>
                     <a class="nav__item -desktop -io-extended hide-for-small-only" href="https://github.com/gsi-upm/Sefarad-2.0/wiki">Documentation</a>
                     <div class="menu js-toggler--basement" style="margin-top:5px; -webkit-user-select: none; touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
@@ -115,7 +113,7 @@
 
             <div class="cd-fixed-bg cd-bg-1">
                 <h2 class="bucket__headline h2 g-color-white -mobile-g-color-off-black">
-                    Check our featured projects made by our group
+                    Check our featured projects made with Sefarad
                 </h2>
 
                 <p class="bucket__description g-color-white -width-1-2 hide-for-small-only">
@@ -162,7 +160,7 @@
                             <div class="demo__content js-card-content" style="transform: matrix(1, 0, 0, 1, 0, 269); margin-top: 68px;">
                                 SmartOpenData will create a Linked Open Data infrastructure fed by public and freely available data resources, existing sources for biodiversity and environment protection and research in European National Parks.
                                 <br><a class="nav__item -demos hide-for-small-only"
-                                       href="http://lab.gsi.dit.upm.es/Sefarad2.0/build/web/dashboart.html">Demo</a>
+                                       href="dashboard.html">Demo</a>
                             </div>
                         </div>
                     </div>
@@ -182,9 +180,9 @@
                             </div>
 
                             <div class="demo__content js-card-content" style="transform: matrix(1, 0, 0, 1, 0, 269); margin-top: 68px;">
-                                TourPedia is the Wikipedia of Tourism. It contains information about accommodations, restaurants, points of interest and attractions of different places in Europe.
+                                TourPedia is the Wikipedia of Tourism. It contains information about accommodations and restaurants of three different European cities.
                                 <br><a class="nav__item -demos hide-for-small-only"
-                                       href="http://lab.gsi.dit.upm.es/Sefarad2.0/build/web/dashboartPlaces.html">Demo</a>
+                                       href="dashboardPlaces.html">Demo</a>
                             </div>
                         </div>
                     </div>
@@ -193,20 +191,20 @@
                         <div class="card__content -gutterless">
                             <div class="demo">
                                 <div class="demo__logo">
-                                    <img class="-fade js-lazy-load loaded" style="width: 160px; height: 100px; margin: auto"
-                                         src="http://upload.wikimedia.org/wikipedia/commons/thumb/7/73/DBpediaLogo.svg/2000px-DBpediaLogo.svg.png" data-src="/events/io/images/partners/eat24.png" alt="Eat24">
+                                    <img class="-fade js-lazy-load loaded" style="width: 170px; height: 170px; margin: auto"
+                                         src="http://www.clipartbest.com/cliparts/jTx/pd7/jTxpd7Erc.png" data-src="/events/io/images/partners/eat24.png" alt="Eat24">
                                 </div>
                             </div>
 
                             <div class="card__banner with-hover hide-for-small-only js-card-banner js-card-toggler" style="cursor: pointer; -webkit-user-select: none; touch-action: pan-y; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
-                                <span class="left">DBPedia</span>
+                                <span class="left">Restaurants</span>
                                 <span class="icon -more-grey right"></span>
                             </div>
 
                             <div class="demo__content js-card-content" style="transform: matrix(1, 0, 0, 1, 0, 269); margin-top: 68px;">
                                 DBpedia is a crowd-sourced community effort to extract structured information from Wikipedia and make this information available on the Web.
                                 <br><a class="nav__item -demos hide-for-small-only"
-                                       href="http://lab.gsi.dit.upm.es/Sefarad2.0/build/web/dashboartRestaurants.html">Demo</a>
+                                       href="dashboardRestaurants.html">Demo</a>
                             </div>
                         </div>
                     </div>
