--- a/web/dashboardTweet.html
+++ b/web/dashboardTweet.html
@@ -115,6 +115,9 @@
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <!-- Notifications: style can be found in dropdown.less -->
+                    <li>
+                        <a href="index.html"><i class="ion-android-home" style="font-size: 20px"></i></a>
+                    </li>
                     <li class="dropdown notifications-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
                             <i class="fa fa-bell-o"></i>
@@ -232,7 +235,7 @@
                 <small>Control panel</small>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#"> Home</a></li>
+                <li><a href="index.html"> Home</a></li>
                 <li class="active"><i class="fa fa-pie-chart"></i> Dashboard</li>
             </ol>
         </section>
