--- a/web/dataset.html
+++ b/web/dataset.html
@@ -89,6 +89,9 @@
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <!-- User Account: style can be found in dropdown.less -->
+                    <li>
+                        <a href="index.html"><i class="ion-android-home" style="font-size: 20px"></i></a>
+                    </li>
                     <li style="margin: 7px 10px auto 10px" class="user user-menu">
                         <div>
                             <google-signin clientId="675126827387-jrvg34sf52dni2o8o5kjgthc3abm8s0u.apps.googleusercontent.com"
@@ -141,6 +144,7 @@
                     <ul class="treeview-menu">
                         <li class=""><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
                         <li class=""><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
+                        <li class=""><a href="dashboardTweet.html"><i class="fa fa-circle-o"></i> Tweets Sentiment</a></li>
                         <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
                 </li>
                 <li class="treeview active">
@@ -203,7 +207,7 @@
                 </small>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#"> Home</a></li>
+                <li><a href="index.html"> Home</a></li>
                 <li class="active"><i class="fa fa-database"></i>    Dataset List</li>
             </ol>
         </section>
