--- a/web/queryeditor.html
+++ b/web/queryeditor.html
@@ -88,6 +88,9 @@
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <!-- User Account: style can be found in dropdown.less -->
+                    <li>
+                        <a href="index.html"><i class="ion-android-home" style="font-size: 20px"></i></a>
+                    </li>
                     <li style="margin: 7px 10px auto 10px" class="user user-menu">
                         <div>
                             <google-signin clientId="675126827387-jrvg34sf52dni2o8o5kjgthc3abm8s0u.apps.googleusercontent.com"
@@ -140,6 +143,7 @@
                     <ul class="treeview-menu">
                         <li class=""><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
                         <li class=""><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
+                        <li class=""><a href="dashboardTweet.html"><i class="fa fa-circle-o"></i> Tweets Sentiment</a></li>
                         <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
                 <li class="treeview">
                     <a href="#">
@@ -200,7 +204,7 @@
                 </small>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#"> Home</a></li>
+                <li><a href="index.html"> Home</a></li>
                 <li class="active"><i class="fa fa-database"></i>    Sparql Editor</li>
             </ol>
         </section>
@@ -235,9 +239,6 @@
                     <a class="btn btn-app center-block" id="queryButton">
                         <i class="fa fa-play"></i> Execute Query
                     </a>
-                    <a class="btn btn-app center-block" id="buttonSave2" ng-click="saveResults()" style="display: none;">
-                        <i class="fa fa-save"></i> Save Results
-                    </a>
 
                     <div class="alert alert-danger alert-dismissable hide" id="queryError">
                         <i class="fa fa-ban"></i>
@@ -265,8 +266,6 @@
                     <a class="btn btn-app center-block" ng-click="executeMongoQuery()">
                         <i class="fa fa-play"></i> Execute Query
                     </a>
-                    <a class="btn btn-app center-block" id="buttonSave" ng-click="saveResults()" style="display: none;">
-                        <i class="fa fa-save"></i> Save Results
                     </a>
                     <input hidden="hidden" id="hiddenResults" ng-model="result">
                     <div class="alert alert-danger alert-dismissable hide" id="queryError2">
@@ -463,7 +462,6 @@
                     console.log(data);
                     $("#querySuccess").removeClass('hide');
 
-                    document.getElementById("buttonSave2").style.display = "block";
                     //ko.mapping.fromJSON(data, vm.viewData);
                     //updateWidgets(true);
                     $("#hiddenResults").val(data);
