- 3/06/2015 - Tweets data loaded in dashboard (Still empty)

--- a/web/dashboardTweet.html
+++ b/web/dashboardTweet.html
@@ -98,7 +98,7 @@
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
 </head>
-<body demo="places" class="skin-blue sidebar-collapse sidebar-open">
+<body demo="tweets" class="skin-blue sidebar-collapse sidebar-open">
 <div class="wrapper">
 
     <header class="main-header">
