--- a/web/dataset.html
+++ b/web/dataset.html
@@ -72,7 +72,7 @@
 
 
 </head>
-<body class="skin-blue">
+<body unresolved class="skin-blue">
 <div class="wrapper">
 
     <paper-shadow class="card" z="2"><header class="main-header">
