--- a/web/newquery.html
+++ b/web/newquery.html
@@ -76,7 +76,7 @@
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
 </head>
-<body class="skin-blue">
+<body unresolved class="skin-blue">
 <div class="wrapper">
 
     <paper-shadow class="card" z="2"><header class="main-header">
