--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -16,6 +16,8 @@
 
     <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+    <script src="http://www.polymer-project.org/platform.js"></script>
+    <link rel="import" href="bower_components/polymer/polymer.html">
 
     <!-- Dart Support -->
     <script src="packages/web_components/dart_support.js"></script>
@@ -91,7 +93,7 @@
 
 
 </head>
-<body demo="slovakia" class="skin-blue sidebar-collapse sidebar-open">
+<body unresolved demo="slovakia" class="skin-blue sidebar-collapse sidebar-open">
 <div class="wrapper">
 
     <header class="main-header">
