--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -98,7 +98,7 @@
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
 </head>
-<body demo="places" class="skin-blue sidebar-collapse sidebar-open">
+<body unresolved demo="places" class="skin-blue sidebar-collapse sidebar-open">
 <div class="wrapper">
 
     <header class="main-header">
