--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -94,7 +94,7 @@
 
 
 </head>
-<body demo="restaurants" class="skin-blue sidebar-collapse sidebar-open">
+<body unresolved demo="restaurants" class="skin-blue sidebar-collapse sidebar-open">
 <div class="wrapper">
 
     <header class="main-header">
