--- a/web/polymer-elements/heat-map/heat-map.html
+++ b/web/polymer-elements/heat-map/heat-map.html
@@ -31,15 +31,20 @@
             clearFilter: function () {
                 this.chart.filterAll();
             },
-
             init: function () {
 
                 var pX = this.paramX;
                 var pY = this.paramY;
 
-                this.dimension = this.crossfilter.dimension(function(d) {
-                    return [d[pX].value, d[pY].value];
-                });
+                if (this.type == "param") {
+                    this.dimension = this.crossfilter.dimension(function (d) {
+                        return [d[pX], d[pY]];
+                    });
+                } else {
+                    this.dimension = this.crossfilter.dimension(function (d) {
+                        return [d[pX].value, d[pY].value];
+                    });
+                }
                 this.group = this.dimension.group().reduceCount();
 
 
@@ -47,15 +52,15 @@
 
 
                 this.chart
-                        .width(45*10+180).height(45*5+20)
+                        .width(45*3+180).height(45*4+20)
                         .dimension(this.dimension)
                         .group(this.group)
-                        .keyAccessor(function(d) {return d.key[0]; })
+                        .keyAccessor(function(d) {if (d.key[0] == undefined) d.key[0] = "unknown"; return d.key[0]; })
                         .valueAccessor(function(d) { return d.key[1]; })
                         .colorAccessor(function(d) { return d.value; })
                         .title(function(d) {
-                            return "Polarity:   " + d.key[0] + "\n" +
-                                    "City:  " + d.key[1] + "\n" +
+                            return pX + ":   " + d.key[0] + "\n" +
+                                    pY + ":  " + d.key[1] + "\n" +
                                     "Quantity: " + (d.value);})
                         .colors(["#ffffd9","#edf8b1","#c7e9b4","#7fcdbb","#41b6c4","#1d91c0","#225ea8","#253494","#081d58"])
                         .calculateColorDomain()
