--- a/web/queryeditor.html
+++ b/web/queryeditor.html
@@ -71,7 +71,7 @@
 
 
 </head>
-<body class="skin-blue">
+<body unresolved class="skin-blue">
 <div class="wrapper">
 
     <paper-shadow class="card" z="2"><header class="main-header">
