--- a/web/dashboardTweet.html
+++ b/web/dashboardTweet.html
@@ -300,7 +300,7 @@
                             </div>
                             <!-- /.bar-chart -->
 
-                            <!-- faceted-search -->
+                            <!-- bar-chart -->
                             <!--Widgets must have 'widget' class in order to render their loading screen-->
                             <div class="box box-primary widget">
                                 <div class="box-header">
@@ -313,7 +313,24 @@
                                 </div>
                                 <!-- /.box-body -->
                             </div>
+                            <!-- /.bar-chart -->
+
+                            <!-- faceted-search -->
+                            <!--Widgets must have 'widget' class in order to render their loading screen-->
+                            <div class="box box-primary widget">
+                                <div class="box-header">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                    <h3 class="box-title">Search</h3>
+                                </div>
+                                <!-- box-body -->
+                                <div class="box-body chart-responsive">
+                                    <faceted-search params="hashtags" class="dc-element"></faceted-search>
+                                </div>
+                                <!-- /.box-body -->
+                            </div>
                             <!-- /.faceted-search -->
+                            
+                            
 
                         </div>
                         <!-- /.Left col -->
